Fix wiki references to point to gihub wiki
Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -12,7 +12,7 @@ The main changes are:
 * Link to our Roadmap page.
 -->
 <li><a href="http://scons.org/">SCons Home Page</a></li>
-<li><a href="http://scons.org/wiki/">SCons Wiki</a></li>
+<li><a href="https://github.com/SCons/scons/wiki/">SCons Wiki</a></li>
 </dd>
 
 <dd>
